# SpecReX

./: LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  srex.toml
SpecReX/: box.py  config.py  distributions.py  explanation.py  logger.py  model_funcs.py  responsibility.py  specaug.py  specrex.py  spectral_explanations.py  visualisation.py  wrapper.py
scripts/: example_preprocess.py
tests/: calculate_saliency_vals.py  test_extract_exp.py  test_model_loading.py  test_mutant_generation.py  test_sample_split.py  test_spectra_wn_loading.py
tests/test_data/: channel_first.npy  channel_last.csv  channel_last.npy  test.ipynb
utils/: F1_score_running.py  sim_spectra_gen.py
